--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "@babel/preset-react": "^7.16.7",
     "html-webpack-plugin": "^5.5.0",
+    "loader": "^2.1.1",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "sass": "^1.52.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.10",
@@ -11,6 +13,8 @@
     "@babel/preset-env": "^7.17.10",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
